Trying to load class on other process GPS ok

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2,4 +2,5 @@
 <resources>
     <string name="hello">Mobilis startup</string>
     <string name="app_name">Mobilis</string>
+    <string name="puc">Welcome to PUC-Rio!</string>
 </resources>
